--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .inner {
+    @apply container relative mx-auto flex flex-col px-5 py-4;
+  }
+}
